[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
reqwest= {version= "0.11",features=["blocking","json","rustls-tls"]}
serde = {version= "1.0", features=["derive"]}
colored = "2.0"
[build-dependencies]
slint-build = "1.12.1"






 